--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
-    <title>To Do List</title>
+    <title>Desafio Contefacil</title>
   </head>
   <body>
     <div id="root"></div>
